2006-01-19  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp.c (Gnome::Print::BINDING_VERSION): added.
	* src/rbgp.h (RBGP_{MAJOR,MINOR,MICRO}_VERSION): added.

2005-10-17  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gp-pac.rb: Use path not dummy fill.
	* sample/pac.rb: ditto.

2005-10-14  Kouhei Sutou  <kou@cozmixng.org>

	* sample/gp-pac.rb: Add sample GnomePrint-ly version pac.rb.

	* src/lib/gnomeprint2.rb (Gnome::PrintContext#rounded_rect_filled) 
	(Gnome::PrintContext#rounded_rect_stroked) 
	(Gnome::PrintContext#circle_to): Added convenience API.

	* sample/pac.rb:
	- Added sample based on pac.rb in
	  http://www.artima.com/rubycs/articles/pdf_writer3.html.
	- Use above convenience API.

	* sample/to_file.rb: Use Gnome::PrintContext#stroke and
	Gnome::PrintContext#fill with block.

	* src/rbgp-gnome-print.c: Return self instead of nil.
	(gp_fill, gp_eofill, gp_stroke): Accept	block.

2005-10-10  Kouhei Sutou  <kou@cozmixng.org>

	* src: Fixed indentation.

	* extconf.rb: Use make_version_header.

	* src: Revised copyright information.

	* src/rbgp-gnome-print-pango.h: Removed.
	
2005-10-03  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp.c (Gnome::Print::BUILD_VERSION): Added.

	* extconf.rb: Generate rbgp-version.h.

2005-09-11  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgp-gnome-print.c (gp_gsave): Return the result of yield if
	available.
	(gp_gsave): Ensure restore.

	* test/run-test.rb: Support newlly Test::Unit::AutoRunner#run API.

	* src/rbgp.h: Move Init_*() to ...

	* src/rbgp.c: ... here.
	
	* src/rbgp-utils.h: Remove. Move check_return_code() to ...
	
	* src/rbgp.h: ... here. And ...

	* src/rbgp.h, src/rbgp-gnome-print-job.c, src/rbgp-gnome-print.c:
	... Add 'rbgp_' prefix to check_return_code().

	* src/rbgp-gpa-settings.c (gp_gpa_settings_initialize): Fix
	compiling warnings.

2005-07-24  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/src/rbgp-gnome-print-config.c, rbgp-gnome-print-paper.c, 